--- a/app/src/main/res/layout/activity_playing.xml
+++ b/app/src/main/res/layout/activity_playing.xml
@@ -66,32 +66,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:clickable="true"
-                android:focusable="true"
-                android:layout_above="@+id/playingSongName" />
-
-            <TextView
-                android:id="@+id/playingSongName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/playingSongArtist"
-                android:layout_alignParentStart="true"
-                android:layout_marginTop="10dp"
-                android:singleLine="true"
-                android:text="@string/song"
-                android:textAlignment="center"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textSize="24sp" />
-
-            <TextView
-                android:id="@+id/playingSongArtist"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentStart="true"
-                android:singleLine="true"
-                android:text="@string/artist"
-                android:textAlignment="center"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
+                android:focusable="true" />
 
 
         </RelativeLayout>
