--- a/app/src/main/res/layout/artist_item.xml
+++ b/app/src/main/res/layout/artist_item.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="64dp"
     android:paddingLeft="16dp"
-    android:paddingRight="16dp">
+    android:paddingRight="16dp"
+    android:foreground="?attr/selectableItemBackground">
 
     <ImageView
         android:id="@+id/artistPicture"
