--- a/app/src/main/res/layout/fragment_song_page.xml
+++ b/app/src/main/res/layout/fragment_song_page.xml
@@ -9,8 +9,7 @@
     <RelativeLayout
         android:id="@+id/songContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="20dp">
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/pageArt"
@@ -25,6 +24,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"
             android:singleLine="true"
             android:text="@string/artist"
             android:textAlignment="center"
@@ -36,12 +37,14 @@
             android:layout_height="wrap_content"
             android:layout_above="@+id/playingSongArtist"
             android:layout_alignParentStart="true"
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
             android:singleLine="true"
             android:text="@string/song"
             android:textAlignment="center"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="24sp" />
+            android:textSize="22sp" />
 
     </RelativeLayout>
 </ScrollView>
