--- a/app/src/main/res/layout/playlist_song_item.xml
+++ b/app/src/main/res/layout/playlist_song_item.xml
@@ -2,7 +2,7 @@
 <com.woxthebox.draglistview.swipe.ListSwipeItem xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="64dp"
+    android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
     app:leftViewId="@+id/item_left"
     app:rightViewId="@+id/item_right"
@@ -11,13 +11,13 @@
     <ImageView
         android:id="@+id/drag"
         android:layout_width="56dp"
-        android:layout_height="match_parent"
+        android:layout_height="56dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
         android:background="?selectableItemBackground"
-        android:focusable="true"
         android:clickable="true"
         android:contentDescription="@string/drag_song"
+        android:focusable="true"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:src="@drawable/ic_drag_handle" />
