--- a/app/src/main/res/layout/library_recent.xml
+++ b/app/src/main/res/layout/library_recent.xml
@@ -5,13 +5,10 @@
 
     <include layout="@layout/library_empty" />
 
-    <ListView
-        android:id="@+id/recentPlayables"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/recentContainer"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:choiceMode="singleChoice"
-        android:clickable="true"
-        android:focusable="true"
-        android:footerDividersEnabled="false" />
+        android:orientation="vertical"></LinearLayout>
 
 </RelativeLayout>
