--- a/app/src/main/res/layout/playing_bar.xml
+++ b/app/src/main/res/layout/playing_bar.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="60dp"
@@ -9,15 +8,14 @@
     android:layout_alignParentBottom="true"
     android:layout_alignParentStart="true"
     android:paddingTop="5dp"
-    android:paddingBottom="5dp"
-    tools:showIn="@layout/activity_main">
+    android:paddingBottom="5dp">
 
     <RelativeLayout
-        android:orientation="vertical"
+        android:id="@+id/playingMaximize"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_toStartOf="@+id/playPause"
-        android:id="@+id/playingMaximize">
+        android:layout_alignParentStart="true"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/imageView"
@@ -55,14 +53,13 @@
     </RelativeLayout>
 
     <ImageButton
+        android:id="@+id/playPause"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:text="@string/play"
-        android:id="@+id/playPause"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:src="@drawable/ic_play"
         android:background="@android:color/transparent"
-        android:contentDescription="@string/play_pause_button" />
+        android:contentDescription="@string/play_pause_button"
+        android:src="@drawable/ic_play"
+        android:text="@string/play" />
 
 </RelativeLayout>
