--- a/app/src/main/res/layout/playing_bar.xml
+++ b/app/src/main/res/layout/playing_bar.xml
@@ -1,31 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:id="@+id/playingBar"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:id="@+id/playingBar"
-    android:background="@android:color/black"
     android:layout_alignParentBottom="true"
     android:layout_alignParentStart="true"
-    android:paddingTop="5dp"
-    android:paddingBottom="5dp">
+    android:background="@android:color/black"
+    android:paddingBottom="6dp"
+    android:paddingTop="6dp">
+
+    <ImageButton
+        android:id="@+id/playPause"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:background="@android:color/transparent"
+        android:contentDescription="@string/play_pause_button"
+        android:src="@drawable/ic_play" />
 
     <RelativeLayout
         android:id="@+id/playingMaximize"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:orientation="vertical">
+        android:layout_marginEnd="60dp">
 
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
             android:background="@android:color/transparent"
             android:contentDescription="@string/maximize_playing_song"
-            android:padding="10dp"
+            android:padding="12dp"
             android:src="@drawable/ic_expand_less" />
 
         <TextView
@@ -40,26 +46,17 @@
 
         <TextView
             android:id="@+id/playingSubtitle"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
             android:layout_below="@+id/playingName"
+            android:layout_marginEnd="0dp"
             android:layout_toEndOf="@+id/imageView"
             android:singleLine="true"
             android:text="@string/subtitle"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
     </RelativeLayout>
-
-    <ImageButton
-        android:id="@+id/playPause"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_alignParentEnd="true"
-        android:background="@android:color/transparent"
-        android:contentDescription="@string/play_pause_button"
-        android:src="@drawable/ic_play"
-        android:text="@string/play" />
 
 </RelativeLayout>
